--- a/Morfologia_matemática_Abertura_e_Fechamento.ipynb
+++ b/Morfologia_matemática_Abertura_e_Fechamento.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "gYw2laNBW9F2"
       },
@@ -41,12 +41,12 @@
         "id": "ZuLYD6b-jac2"
       },
       "source": [
-        "# FINGER PRINT <ABERTURA E FECHAMENTO> --> ERUDIR - DILATAR- DILATAR - ERUDIR"
+        "# FINGER PRINT <ABERTURA E FECHAMENTO> --> ERODIR - DILATAR- DILATAR - ERODIR"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -153,7 +153,7 @@
         "id": "1TKqHSxugwZi",
         "outputId": "5025ffe2-f293-4784-c30c-e7f77ade1757"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -192,7 +192,7 @@
         "id": "FuShURbBhwvx",
         "outputId": "bbcc806c-1b17-4cc2-ba1e-0906a61f684e"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -231,7 +231,7 @@
         "id": "XrcOSj0vh6MJ",
         "outputId": "b42be20d-f4f2-400b-820a-54c8ade5a516"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
